profile-card-component-main/style.css
html {
  display: block;
  margin: 0;
  padding: 0;
}

body {
  display: block;
  margin: 0;
  background: url(images/bg-pattern-top.svg), url(images/bg-pattern-bottom.svg);
  background-repeat: no-repeat, no-repeat;
  background-color: hsl(185, 75%, 39%);
  background-position: -350px -450px, 650px 400px;

  overflow: hidden;
  border: 2px solid black;
}

.container {
  border: 2px solid white;
  height: 100vh;
  width: 100vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.card {
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 4px solid blue;
}

.attribution {
  font-size: 11px;
  text-align: center;
  position: absolute;
  bottom: 10px;
}

